--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-picker/picker": "2.4.8",
@@ -14,9 +15,11 @@
     "expo-dev-client": "~2.2.1",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
-    "expo-router": "^1.2.0",
+    "expo-router": "^1.7.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.16.4",
+    "jest-expo": "^48.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -25,12 +28,14 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7",
-    "expo-updates": "~0.16.4"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@testing-library/react-native": "^12.1.2",
+    "@testing-library/jest-native": "^5.4.2",
+    "jest": "^29.5.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
